force-app/main/default/objects/Voice_Due_Mapping__c/Voice_Due_Mapping__c.object-meta.xml
<CustomObject>
    <label>Voice Due Mapping</label>
    <nameField>
        <displayFormat>VDM-{0000}</displayFormat>
        <label>Voice Due Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Due Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>