force-app/main/default/objects/Voice_Due_Mapping__c/fields/Due_Question_InternalId__c.field-meta.xml
<CustomField>
    <fullName>Due_Question_InternalId__c</fullName>
    <label>Due Question InternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>