force-app/main/default/objects/Voice_Due_Mapping__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <label>Question Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>