force-app/main/default/objects/Voice_Due_Mapping__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>TextArea</type>
</CustomField>