force-app/main/default/objects/Voice_Due_Mapping__c/fields/Shortname__c.field-meta.xml
<CustomField>
    <fullName>Shortname__c</fullName>
    <label>Shortname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>